DLR Berlin: Der David von Michelangelo

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1633,6 +1633,10 @@
         Cambridge University Press, 1994. (256 pages)
         <a href="http://www.cambridge.org/de/academic/subjects/politics-international-relations/texts-political-thought/guicciardini-dialogue-government-florence?format=PB"><abbr>ISBN</abbr> 9780521456234</a>.
       </li>
+      <li lang="de">
+        <a href="http://www.deutschlandradio.de/archiv/dlr/sendungen/merkmal/300029/index.html" hreflang="de">Der David von Michelangelo: 500 Jahre alt</a>,
+        <i class="website">DeutschlandRadio Berlin</i>, 08.08.2004.
+      </li>
       <li lang="de">Roeck, Bernd:
         <i class="booktitle">Der Morgen der Welt. Geschichte der Renaissance</i>. C. H. Beck, 2017.
         <a href="https://www.chbeck.de/roeck-morgen-welt/product/16572675"><abbr>ISBN</abbr> 978-3-406-69876-7</a>.
