minor edit (Darmiento)

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1525,7 +1525,7 @@
         <a href="http://www.investingintheclassics.com/archives/546">Machiavelli’s Discourses on Livy: On Adversaries</a> (08.11.2015),
         <a href="http://www.investingintheclassics.com/archives/560">Machiavelli’s Discourses on Livy: On Acquisitions</a> (15.11.2015),
         <a href="http://www.investingintheclassics.com/archives/588">Machiavelli’s Discourses on Livy: On Conspiracies</a> (22.11.2015).
-        (Darmiento is an undergraduate student at the University of Chicago studying Philosophy.)
+        (Darmiento is (or was) an undergraduate student at the University of Chicago studying Philosophy.)
       </li>
       <!--https://www.les-philosophes.fr/machiavel.html -->
     </ul>
