Cooper: Nussbaum: The Philosopher Queen

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1926,6 +1926,10 @@
         <i class="magazine">Quillette</i>, 13.04.2018.
         <!--@@-->
       </li>
+      <li>Cooper, Marilyn:
+        <a href="https://www.momentmag.com/martha-nussbaum-the-philosopher-queen/">Martha Nussbaum: The Philosopher Queen</a>,
+        <i class="magazine">Moment (magazine)</i>, 13.07.2018.
+      </li>
       <li lang="fr">Hansen-Löve, Laurence:
         <a href="https://la-philosophie.com/pourquoi-les-philosophes-ne-gouverneront" hreflang="fr">Pourquoi les philosophes ne gouverneront plu</a>,
         <i class="website">La-Philosophie.com</i>, 22.05.2017.
