AC Grenoble: Nicolas Machiavel

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1494,6 +1494,11 @@
         <a href="https://www.youtube.com/watch?v=GTQlnmWCPgA">Machiavelli’s Advice For Nice Guys</a> (5 minutes).
       </li>
       <li>
+        <a href="http://www.ac-grenoble.fr/PhiloSophie/logphil/auteurs/machiave.htm" hreflang="fr" lang="fr">Nicolas Machiavel</a>,
+        <i class="website">Philosophie</i> (no date).
+        <!--Renaissance Italy: divided into smaller states [+ some threats from north of the Alps]: a bit like Westeros from Game of Thrones without dragons-->
+      </li>
+      <li>
         <a href="https://www.youtube.com/watch?v=nzUhICZPG9Q">The two sides of Niccolò Machiavelli</a>,
         an 8-minute video on the channel <i class="youtubechannel">Inventing Civilization</i>.
       </li>
