Democracy Now: From CIA-Backed Wars to Cartel Violence

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -2183,6 +2183,11 @@
         <a href="https://www.democracynow.org/2018/3/12/as_ex_cia_head_admits_to">As Ex-<abbr>CIA</abbr> Head Admits to <abbr>U.S.</abbr> Meddling in Elections, Is Outrage over Russian Interference Overblown?</a>
         (12.03.2018).<!--@@All the Shah's Men-->
       </li>
+      <li>Democracy Now:
+        <a href="https://www.youtube.com/watch?v=qo4bTgJvp2E">From <abbr>CIA</abbr>-Backed Wars to Cartel Violence: Inside the Roots of the Refugee Crisis in Central America</a>
+        (YouTube, 19 minutes, 09.07.2018).
+        <!--See also https://www.democracynow.org/2018/7/9/from_cia_backed_wars_to_cartel & https://www.democracynow.org/2018/6/28/jennifer_harbury_on_the_crackdown_on -->
+      </li>
     </ul>
 
     <h3>Neoliberalism</h3>
