Heers: Machiavel (Fayard, 1985)

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -967,7 +967,7 @@
         * Christopher Hibbert: Florence: The Biography of a City. Viking, 1993; Penguin, 1994.
         * Miles J. Unger: Magnifico: The Brilliant Life and Violent Times of Lorenzo de' Medici. Simon & Schuster, 2008.
         * Jacob Burckhardt: Die Kultur der Renaissance in Italien.
-        * Volker Reihardt: Die Renaissance in Italien. Geschichte und Kultur. Beck'sche Reihe, 2002.
+        * Volker Reinhardt: Die Renaissance in Italien. Geschichte und Kultur. Beck'sche Reihe, 2002.
         * 1517: Martin Luther: Ninety-five Theses: https://en.wikipedia.org/wiki/Ninety-five_Theses 
       -->
     </ul>
@@ -1396,6 +1396,10 @@
         <i class="newspaper">Die Zeit</i>, <abbr>Nr.</abbr> 43, 19.10.2000.
       </li>
       <!--Making up Machiavelli (PhD?): https://www.sciencespo.fr/ecole-doctorale/sites/sciencespo.fr.ecole-doctorale/files/5.%20M1S1_Marcello-SIMONETTA.pdf -->
+      <li><span lang="fr">Heers, Jacques:
+        <i class="booktitle">Machiavel</i>. Fayard</span>, 1985. (450 pages)
+        <a href="http://www.fayard.fr/machiavel-9782213015781" hreflang="fr"><abbr>ISBN</abbr> 9782213015781</a>.
+        <!--@@excerpt available-->
     </ul>
     <p>Articles, podcasts, videos and blog posts:</p>
     <ul>
