DLF: Lange Nacht zum 200. Geburtstag Marx

--- a/philosophy/marx_karl.html
+++ b/philosophy/marx_karl.html
@@ -182,6 +182,10 @@
         <a href="https://www.youtube.com/watch?v=9FaOKNpAiIM">Who was Karl Marx? | <abbr>DW</abbr> Documentary</a>
         (YouTube, 42 minutes, 05.05.2018).
       </li>
+      <li>
+        <a href="https://www.deutschlandfunk.de/eine-lange-nacht-zum-200-geburtstag-von-karl-marx-marx-aus.704.de.html?dram:article_id=413050" hreflang="de" lang="de">Eine Lange Nacht zum 200. Geburtstag von Karl Marx &mdash; Marx aus Frankreich</a>,
+        <i class="website" lang="de">Deutschlandfunk</i>, 05.05.2018.
+      </li>
       <li>TheRealNews:
         <a href="https://www.youtube.com/watch?v=uHxOBrd9tWE">200th Anniversary of the Birth of Marx and a Revolution in Understanding History</a>
         (YouTube, 21 minutes, 05.05.2018).
