graduates of the School of the Americas

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -2192,6 +2192,13 @@
         (YouTube, 19 minutes, 09.07.2018).
         <!--See also https://www.democracynow.org/2018/7/9/from_cia_backed_wars_to_cartel & https://www.democracynow.org/2018/6/28/jennifer_harbury_on_the_crackdown_on -->
       </li>
+      <li>
+        <a href="https://en.wikipedia.org/wiki/Western_Hemisphere_Institute_for_Security_Cooperation#Graduates_of_the_School_of_the_Americas">Graduates of the School of the Americas</a>:
+        <q>The <abbr>U.S.</abbr> Army School of the Americas is a school that has run more dictators than any other school in the history of the world.</q>
+        (<cite>Congressman Joseph P. Kennedy II, quoted in <i class="booktitle">Who Benefits from Global Violence and War: Uncovering a Destructive System</i>
+        by Marc Pilisuk ad Jennifer Achord Rountree, Praeger Security International, 2008</cite>).
+        <!--See also the review at https://www.tandfonline.com/doi/abs/10.1080/10781910903272718?journalCode=hpcn20 -->
+      </li>
     </ul>
 
     <h3>Neoliberalism</h3>
