Smith: The Meanig and End of Religion

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -294,6 +294,12 @@
         <i class="booktitle">Atheism: What Everyone Needs to Know®</i>. Oxford University Press, 2015. (304 pages)
         <a href="https://global.oup.com/academic/product/atheism-9780199334582"><abbr>ISBN</abbr> 9780199334582</a>.
       </li>
+      <li>Smith, Wilfred Cantwell:
+        <i class="booktitle">The Meaning and End of Religion</i>. [1962] Fortress Press, 1990. (352 pages)
+        <a href="http://fortresspress.com/product/meaning-and-end-religion"><abbr>ISBN</abbr> 9780800624750</a>.
+        <br />Publisher's description:
+        <quote>Wilfred Cantwell Smith, maintained in this vastly important work that Westerners have misperceived religious life by making "religion" into one thing. He shows the inadequacy of "religion" to capture the living, endlessly variable ways and traditions in which religious faith presents itself in the world.</quote>
+      </li>
       <li>
         <a href="http://www.mauthner-atheismus.de/" hreflang="de" lang="de">Fritz Mauthner und der Atheismus</a>:
         German website about the Austro-Hungarian novelist and philosopher
