Hoekstra et al: Robust misinterpretation ...

--- a/science/mathematics.html
+++ b/science/mathematics.html
@@ -314,6 +314,17 @@
         take a critical look at newspaper articles and other publications that contain
         (potentially) misleading statistics or numbers.
       </li>
+      <li>Hoekstra, Rink; Morey, Richard D.; Rouder, Jeffrey N.; Wagenmakers, Eric-Jan:
+        <a href="https://link.springer.com/article/10.3758%2Fs13423-013-0572-3">Robust misinterpretation of confidence intervals</a>,
+        <i class="journal">Psychonomic Bulletin &amp; Review</i>, October 2014, Volume 21, Issue 5, <abbr>pp</abbr> 1157–1164.
+        <br />This is a brief report on a study on how researchers and students in the field of psychology
+        interpret six particular statements about confidence intervals (<abbr>CI</abbr>). The authors found that
+        <q>researchers hardly outperformed the students, even though the students had not received any education on statistical inference whatsoever.</q>
+        The report's abstract concludes with the following statement:
+        <blockquote>Our findings suggest that many researchers do not know the correct interpretation of a <abbr>CI</abbr>.
+          The misunderstandings surrounding <i>p</i>-values and <abbr>CIs</abbr> are particularly unfortunate because they constitute the main tools by which psychologists draw conclusions from data.</blockquote>
+        <!--@@download?-->
+      </li>
     </ul>
 
   </main>
