Smith: What Is Scripture?

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -300,6 +300,10 @@
         <br />Publisher's description:
         <quote>Wilfred Cantwell Smith, maintained in this vastly important work that Westerners have misperceived religious life by making "religion" into one thing. He shows the inadequacy of "religion" to capture the living, endlessly variable ways and traditions in which religious faith presents itself in the world.</quote>
       </li>
+      <li>Smith, Wilfred Cantwell:
+        <i class="booktitle">What Is Scripture?: A Comparative Approach</i>. [1962] Fortress Press, 1994. (400 pages)
+        <a href="http://fortresspress.com/product/what-scripture-comparative-approach"><abbr>ISBN</abbr> 9780800626082</a>.
+      </li>
       <li>
         <a href="http://www.mauthner-atheismus.de/" hreflang="de" lang="de">Fritz Mauthner und der Atheismus</a>:
         German website about the Austro-Hungarian novelist and philosopher
