--- a/lijst.html
+++ b/lijst.html
@@ -362,9 +362,9 @@
 
   <p>The impending end or crisis of capitalism:</p>
   <ul>
-    <li lang="de"><a href="http://www.mpifg.de/people/ws/publikation_en.asp">Streeck, Wolfgang</a>:
+    <li lang="de"><del><a href="http://www.mpifg.de/people/ws/publikation_en.asp">Streeck, Wolfgang</a>:
       <i class="booktitle">Gekaufte Zeit - Die vertagte Krise des demokratischen Kapitalismus</i>. Suhrkamp, 2015.
-      <a href="http://www.suhrkamp.de/buecher/gekaufte_zeit-wolfgang_streeck_29733.html"><abbr>ISBN</abbr> 978-3-518-29733-9</a>.
+      <a href="http://www.suhrkamp.de/buecher/gekaufte_zeit-wolfgang_streeck_29733.html"><abbr>ISBN</abbr> 978-3-518-29733-9</a>.</del>
       <!--
         * Wolfgang Streeck: "Buying Time: the delayed crisis of democratic capitalism", LSE (92 minutes; uploaded 23.10.2014): https://www.youtube.com/watch?v=B5r9rqgPUVU 
         * Karl Weber: "Zusammenfassung von Wolfgang Streeck’s Studie „Die gekaufte Zeit – Die vertagte Krise des demokratischen Kapitalismus“", Kontrapunkt, 23.01.2014: http://www.rat-kontrapunkt.ch/manifeste-und-debatten/kontrapunkt-debatten/gekaufte-zeit-kontrapunkt-debatten/zusammenfassung-von-wolfgang-streecks-studie-die-gekaufte-zeit-die-vertagte-krise-des-demokratischen-kapitalismus/
@@ -552,7 +552,7 @@
     <li>Karetryk, Bryan (editor): <i class="booktitle">Russian Émigré Short Stories from Bunin to Yanovsky</i>. Penguin, 2017. (464 pages)
       <a href="https://www.penguin.co.uk/books/283003/russian-emigre-short-stories-from-bunin-to-yanovsky/"><abbr>ISBN</abbr> 978 0241310908</a>.
     </li>
-    <li><a href="https://en.wikipedia.org/wiki/Richard_D._Alexander">Alexander, Richard D.: 
+    <li><a href="https://en.wikipedia.org/wiki/Richard_D._Alexander">Alexander, Richard D.</a>:
       <strong><i class="booktitle">The Biology of Moral Systems</i></strong>. 1987.
       (Routledge: <a href="https://www.routledge.com/The-Biology-of-Moral-Systems/Alexander/p/book/9780202011745"><abbr>ISBN</abbr> 9780202011745</a>).
       <!--See also
