--- a/lijst.html
+++ b/lijst.html
@@ -352,7 +352,7 @@
       <!-- Mentioned by Mark Blyth at https://www.youtube.com/watch?v=KSYb6RbuOG0  -->
     </li>
     <li>Hamilton, Clive:
-      <i class="booktitle">Silent Invasion: China's Influence in Australi</i>. Hardle Grant, 2018. (376 pages)
+      <i class="booktitle">Silent Invasion: China's Influence in Australia</i>. Hardle Grant, 2018. (376 pages)
       <a href="http://www.hardiegrant.com/au/publishing/bookfinder/book/silent-invasion-by-clive-hamilton/9781743794807"><abbr>ISBN</abbr> 9781743794807</a>.
       <br />See also
       China Uncensored: <a href="https://www.youtube.com/watch?v=E5vUaCj0QGI">China's Growing Influence on the West and Its Politics</a> (YouTube, 24 minutes, 23.03.2018) and
