FutureLearn: MBA with AE Specialism

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -380,6 +380,10 @@
         <blockquote><abbr>CLAIRE</abbr> is an initiative by the European <abbr>AI</abbr> community that seeks to strengthen European excellence in <abbr>AI</abbr> research and innovation.
           To achieve this, <abbr>CLAIRE</abbr> proposes the establishment of a pan-European Confederation of Laboratories for Artificial Intelligence Research in Europe that achieves “brand recognition” similar to <abbr>CERN</abbr>.</blockquote>
       </li>
+      <li>
+        <a href="https://www.futurelearn.com/degrees/coventry/mba-artificial-intelligence"><abbr>MBA</abbr> with Artificial Intelligence Specialism</a>:
+        an online degree by Coventry University that consists of eleven courses starting in September 2018.
+      </li>
     </ul>
 
     <p>Links in chronological order:</p>
