What can you learn about deep learning in just five days?

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -677,6 +677,10 @@
         <a href="https://medium.freecodecamp.org/a-history-of-machine-translation-from-the-cold-war-to-deep-learning-f1d335ce8b5">A history of machine translation from the Cold War to deep learning</a>,
         <i class="blog">freeCodeCamp on Medium</i>, 12.03.2018 (19-minute read).
       </li>
+      <li>
+        <a href="https://www.siliconrepublic.com/machines/deep-learning-course-ichec">What can you learn about deep learning in just five days?</a>,
+        <i class="website">
+      </li>
       <li>Farris, Mic:
         <a href="https://www.datasciencecentral.com/profiles/blogs/the-fundamentals-of-data-science">The Fundamentals of Data Science</a>,
         <i class="blog">Data Science Central blog</i>, 24.08.2017.
