QUT course on FL: Big Data

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -384,6 +384,17 @@
         <a href="https://www.futurelearn.com/degrees/coventry/mba-artificial-intelligence"><abbr>MBA</abbr> with Artificial Intelligence Specialism</a>:
         an online degree by Coventry University that consists of eleven courses starting in September 2018.
       </li>
+      <li>
+        <a href="https://www.futurelearn.com/courses/big-data-machine-learning">Big Data: Statistical Inference and Machine Learning</a>:
+        online courses by Queensland University of Technology (<abbr>QUT</abbr>) hosted on FutureLearn.
+        It is a three-week course that requires 2 hours of study per week.
+        It requires tools such as <a href="https://www.r-project.org/">R</a>,
+        <a href="https://www.rstudio.com/products/rstudio/download/">R Studio</a>,
+        <a href="https://www.h2o.ai/download/">H20 Flow</a> and
+        <a href="https://www.cs.waikato.ac.nz/ml/weka/downloading.html">Weka</a>.
+        The course is part of the
+        <a href="https://www.futurelearn.com/programs/big-data-analytics">Big Data Analytics program</a>.
+      </li>
     </ul>
 
     <p>Links in chronological order:</p>
