Harvard course on edX: Statistics and R

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -395,6 +395,14 @@
         The course is part of the
         <a href="https://www.futurelearn.com/programs/big-data-analytics">Big Data Analytics program</a>.
       </li>
+      <li>
+        <a href="https://www.edx.org/course/statistics-and-r">Statistics and R</a>
+        is an online course created by Harvard University that is hosted on edX.
+        It is described as
+        <q>An introduction to basic statistical concepts and R programming skills necessary for analyzing data in the life sciences.</q>
+        It is a four-week course that requires two to four hours of study per week.
+        The course is part of the <a href="https://www.edx.org/xseries/data-analysis-life-sciences">Data Analysis for Life Sciences series</a>.
+      </li>
     </ul>
 
     <p>Links in chronological order:</p>
