FL: Advanced Machine Learning

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -403,6 +403,12 @@
         It is a four-week course that requires two to four hours of study per week.
         The course is part of the <a href="https://www.edx.org/xseries/data-analysis-life-sciences">Data Analysis for Life Sciences series</a>.
       </li>
+      <li>
+        <a href="https://www.futurelearn.com/courses/advanced-machine-learning">Advanced Machine Learning</a>:
+        online course by The Open University (<abbr>UK</abbr>) and Persontyle that is hosted on FutureLearn.
+        It is a four-week course that requires four hours of study per week. Some previous experience
+        with machine learning and statistical modeling is expected. The course uses R.
+      </li>
     </ul>
 
     <p>Links in chronological order:</p>
