IBM on edX: Python Basics for Data Science

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -395,6 +395,7 @@
         The course is part of the
         <a href="https://www.futurelearn.com/programs/big-data-analytics">Big Data Analytics program</a>.
       </li>
+      <!--@@move Statistics and R elsewhere-->
       <li>
         <a href="https://www.edx.org/course/statistics-and-r">Statistics and R</a>
         is an online course created by Harvard University that is hosted on edX.
@@ -408,6 +409,11 @@
         online course by The Open University (<abbr>UK</abbr>) and Persontyle that is hosted on FutureLearn.
         It is a four-week course that requires four hours of study per week. Some previous experience
         with machine learning and statistical modeling is expected. The course uses R.
+      </li>
+      <li>
+        <a href="https://www.edx.org/course/python-basics-for-data-science-ibm">Python Basics for Data Science</a>
+        is an online course created by <abbr>IBM</abbr> that is hosted on edX.
+        It is a one-week course that requires 2 to 5 hours of study.
       </li>
     </ul>
 
