Kennedy: Ireland's first master's degree in AI

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -582,6 +582,14 @@
         <a href="https://blogs.microsoft.com/ai/microsoft-creates-ai-can-read-document-answer-questions-well-person/">Microsoft creates <abbr>AI</abbr> that can read a document and answer questions about it as well as a person</a>,
         <i class="blog">Microsoft: The <abbr>AI</abbr> Blog</i>, 15.01.2018.
       </li>
+      <li>Kennedy, John:
+        <a href="https://www.siliconrepublic.com/careers/ai-masters-degree-ireland">Ireland’s first master’s degree in <abbr>AI</abbr> driven by spectre of a skills shortage</a>,
+        <i class="website">Silicon Republic</i>, 26.01.2018. Quote:
+        <blockquote>
+          <p>The course will run over two years part-time and will be delivered primarily online with some intensive problem-based learning workshops taking place on the University of Limerick campus.</p>
+          <p>An integral part of the programme will be a fast-track 12-week online course – Introduction to <abbr>AI</abbr> – to be developed in collaboration with the Irish Centre for High End Computing which will build the foundational skills of participants to enable them to enter and complete the master’s programme.</p>
+        </blockquote>
+      </li>
       <li>Vainu, Indrek:
         <a href="https://www.re-work.co/blog/3-lessons-learned-from-automating-customer-service-with-ai">3 Lessons Learned From Automating Customer Service With <abbr>AI</abbr></a>,
         <i class="blog">Re-Work blog</i>, 31.01.2018.
