IBM on edX: Machine Learning with Python

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -415,6 +415,13 @@
         is an online course created by <abbr>IBM</abbr> that is hosted on edX.
         It is a one-week course that requires 2 to 5 hours of study.
       </li>
+      <li>
+        <a href="https://www.edx.org/course/machine-learning-with-python">Machine Learning with Python: A Practical Introduction</a>
+        is an online course created by <abbr>IBM</abbr> and hosted on edX.
+        It is a two-week course that requires 3 to 6 hours of study per week.
+        The course requires some previous experience with Python and data science, <abbr>e.g.</abbr>
+        through the course &ldquo;Python Basics for Data Science&rdquo;.
+      </li>
     </ul>
 
     <p>Links in chronological order:</p>
