IBM on edX: Deep Learning Fundamentals

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -422,6 +422,12 @@
         The course requires some previous experience with Python and data science, <abbr>e.g.</abbr>
         through the course &ldquo;Python Basics for Data Science&rdquo;.
       </li>
+      <li>
+        <a href="https://www.edx.org/course/deep-learning-fundamentals-with-keras">Deep Learning Fundamentals with Keras</a>
+        is an online course created by <abbr>IBM</abbr> that is hosted on edX.
+        It is a five-week course that requires two to four hours of study per week.
+        <a href="https://github.com/keras-team/keras">Keras</a> is an open-source neural network library written in Python.
+      </li>
     </ul>
 
     <p>Links in chronological order:</p>
