Columbia U on edX: AI

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -428,6 +428,12 @@
         It is a five-week course that requires two to four hours of study per week.
         <a href="https://github.com/keras-team/keras">Keras</a> is an open-source neural network library written in Python.
       </li>
+      <li>
+        <a href="https://www.edx.org/course/artificial-intelligence-ai-columbiax-csmm-101x-4">Artificial Intelligence (<abbr>AI</abbr>)</a>
+        is an online course created by Columbia University and is hosted on edX.
+        It is a twelve-week course that requires eight to ten hours of study per week and expects
+        previous experience with Python and an understanding of probability, linear algebra and calculus.
+      </li>
     </ul>
 
     <p>Links in chronological order:</p>
