Harvard U on edX: Data Science: Machine Learning

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -434,6 +434,15 @@
         It is a twelve-week course that requires eight to ten hours of study per week and expects
         previous experience with Python and an understanding of probability, linear algebra and calculus.
       </li>
+      <li>
+        <a href="https://www.edx.org/course/data-science-machine-learning">Data Science: Machine Learning</a>
+        is an online course created by Harvard University that is hosted on edX.
+        It is a four-week course that requires two to four hours of study per week.
+        It is part of Harvard University's
+        <a href="https://www.edx.org/professional-certificate/harvardx-data-science">Professional Certificate Program in Data Science</a>
+        and assumes that learners have taken the preceding (seven) courses in the program.
+      </li>
+      <!--Other machine learning courses on edX: https://www.edx.org/learn/machine-learning -->
     </ul>
 
     <p>Links in chronological order:</p>
