U Washington: Machine Learning Foundation

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -443,6 +443,14 @@
         and assumes that learners have taken the preceding (seven) courses in the program.
       </li>
       <!--Other machine learning courses on edX: https://www.edx.org/learn/machine-learning -->
+      <li>
+        <a href="https://www.coursera.org/learn/ml-foundations">Machine Learning Foundations: A Case Study Approach</a>
+        is an online course created by the University of Washington and is hosted on Coursera.
+        Is is the first course in the
+        <a href="https://www.coursera.org/specializations/machine-learning">Machine Learning Specialization</a>
+        and requires five to eight hours of study per week over a period of six weeks.
+        <!--@@starts on 27 September-->
+      </li>
     </ul>
 
     <p>Links in chronological order:</p>
