Andrew Ng: Coursera: Machine Learning

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -451,6 +451,15 @@
         and requires five to eight hours of study per week over a period of six weeks.
         <!--@@starts on 27 September-->
       </li>
+      <li>
+        <a href="https://www.coursera.org/learn/machine-learning">Machine Learning</a>
+        is an online course by Andrew Ng (professor at Stanford University and co-founder of Coursera)
+        that is hosted on Coursera. It consists of eleven sections that take between two and eight hours
+        to complete (depending on the section). The course prerequisites are not described.
+        <!--@@starts on 27 September-->
+        <!--See Daniel Bourke's video from 22.07.2017 (not very informative, though; also uses Anki to learn Python and other subjects, and reads Ray Dalio's Principles): https://www.youtube.com/watch?v=S6u6kO1GGXc -->
+        <!--https://duckduckgo.com/?q=%22ray+dalio%22+principles&t=ffab&ia=web -->
+      </li>
     </ul>
 
     <p>Links in chronological order:</p>
