Coursera: Neural Networks and Deep Learning

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -460,6 +460,15 @@
         <!--See Daniel Bourke's video from 22.07.2017 (not very informative, though; also uses Anki to learn Python and other subjects, and reads Ray Dalio's Principles): https://www.youtube.com/watch?v=S6u6kO1GGXc -->
         <!--https://duckduckgo.com/?q=%22ray+dalio%22+principles&t=ffab&ia=web -->
       </li>
+      <li>
+        <a href="https://www.coursera.org/learn/neural-networks-deep-learning">Neural Networks and Deep Learning</a>
+        is an online course created by deeplearning.ai and hosted on Coursera. It is the first course in a
+        <a href="https://www.coursera.org/specializations/deep-learning">Deep Learning Specialization</a>
+        and requires three to six hours per week over a period of four weeks.
+        The course requires basic Python programming skills, mathematics knowledge (matrix vector operations)
+        and basic machine learning knowledge (how to frame a machine learning problem).
+      </li>
+      <!--Other machine learning couses on Coursera: https://www.coursera.org/browse/data-science/machine-learning -->
     </ul>
 
     <p>Links in chronological order:</p>
