--- a/science/index.html
+++ b/science/index.html
@@ -386,12 +386,15 @@
         <i class="booktitle">Newton’s Apple and Other Myths about Science</i>. Harvard University Press, 2015.
         <a href="http://www.hup.harvard.edu/catalog.php?isbn=9780674967984"><abbr>ISBN</abbr> 9780674967984</a>.
       </li>
+      <li>Keene, Melanie:
+        <i class="booktitle">Science in Wonderland: The scientific fairy tales of Victorian Britain</i>. Oxford University Press, 2015. (256 pages)
+        <a href="https://global.oup.com/academic/product/science-in-wonderland-9780199662654"><abbr>ISBN</abbr> 9780199662654</a>.;
+      </li>
       <!--li><a href="https://www.youtube.com/watch?v=PxkxCSyP60Y">Historical Myths About Science by John L. Heilbro</a>,
         recording of a speech at Washington and Lee University in March 2014.
         (John L. Heilbron's lecture starts at 7'54''.)
       </li-->
       <!-- Mason, Stephen F.: A History of The Sciences. Revised Edition. New York: Collier Books: apparently a "wearisome book": http://www.albany.edu/~scifraud/data/sci_fraud_0270.html -->
-      <!-- Armand Marie Leroi: The Lagoon: How Aristotle Invented Science. Bloomsbury, 2014. ISBN 9781408836200. http://www.bloomsbury.com/uk/the-lagoon-9781408836200/ -->
       <!-- René Taton: Histoire générale des sciences (4 volumes). Presses Universitaires de France (PUF), 1995 -->
       <!-- Evolution:
         Ruse, Michael, editor: The Cambridge Encyclopedia of Darwin and Evolutionary Thought. Cambridge UP, 2013. http://www.cambridge.org/de/academic/subjects/philosophy/philosophy-science/cambridge-encyclopedia-darwin-and-evolutionary-thought 
@@ -751,6 +754,7 @@
         According to Phil Kerpen (pres of the conservative org American Commitment), who is against the Paris agreement, the Philippines have withdrawn, India building too many coal plants to meet its targets.
         Princeton University's Michael Oppenheimer is in favour of the Paris agreement and points out how China is moving forward.
     -->
+
     <h2 id="science-denial">Science Denial, Anti-Science and Pseudoscience</h2>
     <p>The most well-known examples of science denial in the Western world are
       creationism and climate change denial, which are particularly strong in the <abbr>USA</abbr>.
@@ -989,7 +993,7 @@
         <br />For each of the psychologist in the list, the article briefly describes his or her publications, followed by a selection of publications (mainly books).
         There is a strong bias towards psychologists from the United States.
       </li>
-      <li>Fisher, Carl Erik: 
+      <li>Fisher, Carl Erik:
         <a href="http://nautil.us/issue/45/power/against-willpower">Against Willpower</a>,
         <i class="magazine">Nautilus</i>, 02.02.2017.
       </li>
@@ -1231,6 +1235,11 @@
       <li>Mossman, Kenneth:
         <i class="booktitle">The Complexity Paradox: The More Answers We Find, the More Questions We Have</i>. Oxford University Press, 2014. (288 pages)
         <a href="https://global.oup.com/academic/product/the-complexity-paradox-9780199330348"><abbr>ISBN</abbr> 9780199330348</a>.
+      </li>
+      <!--Medawar: The Limits of Science-->
+      <li><a href="https://en.wikipedia.org/wiki/Nicholas_Rescher">Rescher, Nicholas</a>:
+        <i class="booktitle">The Limits of Science</i> (1984, 1999).
+        <!--http://www.uni-konstanz.de/philosophie/files/ethical_limits_of_science.pdf -->
       </li>
     </ul>
 
