Potochnik et al: Recipes for Science

--- a/science/index.html
+++ b/science/index.html
@@ -192,6 +192,10 @@
         <a href="https://en.wikipedia.org/wiki/Essonne">Essonne department</a> in the north of France,
         that aims to bring science to the general public. 
       </li>
+      <li>Potochnik, Angela; Colombo, Matteo; Wright, Cory:
+        <i class="booktitle">Recipes for Science: An Introduction to Scientific Methods and Reasoning</i>. Routledge, 2018. (336 pages)
+        <a href="https://www.routledge.com/product/isbn/9781138920736"><abbr>ISBN</abbr> 9781138920736</a>.
+      </li>
       <li>Angier, Natalie: 
         <i class="booktitle">The Canon: The Beautiful Basics of Science</i>.
         Faber &amp; Faber, 2008. 
@@ -1099,6 +1103,33 @@
         <i class="blog">Critical Theory</i>, 28.02.2013.
       </li>
     </ul>
+    <!--"The 25 Best Self Improvement Books To Read Before You Turn 25" Lifehack; last updated on 24.08.2018:
+      1. Seth Godin: Whatcha Gonna Do with That Duck? And Other Provocations
+      2. Nassim Nicholas Taleb: Fooled by Randomness: The Hidden Role of Chance in Life and in the Markets
+      3. Robert Greene: The 48 Laws of Power
+      4. Stephen. R. Covey: The 7 Habits of Highly Effective People: Powerful Lessons in Personal Change
+      5. James Fadiman: The Psychedelic Explorer’s Guide: Safe, Therapeutic, and Sacred Journeys
+      6. Brian Tracy: Eat That Frog!: 21 Great Ways to Stop Procrastinating and Get More Done in Less Time
+      7. Napoleon Hill: Think and Grow Rich: The Original 1937 Unedited Edition
+      8. Alan Wallace: The Attention Revolution: Unlocking the Power of the Focused Mind
+      9. John Durant: The Paleo Manifesto: Ancient Wisdom for Lifelong Health
+      10. Daniel J. Siegel: Mindsight: The New Science of Personal Transformation
+      11. Dale Carnegie: How to Win Friends & Influence People
+      12. David D. Burns: Feeling Good: The New Mood Therapy
+      13. Maxwell Maltz: Psycho-Cybernetics, A New Way to Get More Living Out of Life
+      14. Daniel Kahneman: Thinking, Fast and Slow
+      15. Chris Hadfield: An Astronaut’s Guide to Life on Earth: What Going to Space Taught Me About Ingenuity, Determination, and Being Prepared for Anything
+      16. Paul Jaminet & Shou-Ching Jaminet: Perfect Health Diet: Regain Health and Lose Weight by Eating the Way You Were Meant to Eat
+      17. John C. Maxwell: Failing Forward: Turning Mistakes into Stepping Stones for Success
+      18. Eckhart Tolle: The Power of Now
+      19. Randy Pausch: The Last Lecture
+      20. Brené Brown: Daring Greatly: How the Courage to Be Vulnerable Transforms the Way We Live, Love, Parent, and Lead
+      21. Carl Sagan: The Demon-Haunted World: Science as a Candle in the Dark
+      22. Jules Evans: Philosophy for Life
+      23. Victor. E. Frankl: Man’s Search For Meaning
+      24. Joshua Becker: Simplify
+      25. Kamal Ravikant: Love Yourself Like Your Life Depends On It
+    -->
 
     <h2>Unsorted Links</h2>
     <ul>
