Samir Amin (Wikipedia)

--- a/science/index.html
+++ b/science/index.html
@@ -1309,6 +1309,10 @@
         <a href="https://www.thoughtco.com/the-economic-effect-of-tariffs-1146368">Tariffs - The Economic Effect of Tariffs</a>,
         <i class="website">ThoughtCo</i>, 17.03.2017.
       </li>
+      <li>
+        <a href="https://en.wikipedia.org/wiki/Samir_Amin">Samir Amin (1931 – 2018)</a> (Wikipedia):
+        Egyptian-French Marxian economist.
+      </li>
     </ul>
 
   </main>
