John Horgan: The End of Science

--- a/science/index.html
+++ b/science/index.html
@@ -1272,6 +1272,9 @@
         <i class="booktitle">The Limits of Science</i> (1984, 1999).
         <!--http://www.uni-konstanz.de/philosophie/files/ethical_limits_of_science.pdf -->
       </li>
+      <li><a href="https://en.wikipedia.org/wiki/John_Horgan_(journalist)">Horgan, John</a>:
+        <i class="booktitle">The End of Science</i> (1996).
+      </li>
     </ul>
 
     <p>Economics:</p>
