--- a/science/index.html
+++ b/science/index.html
@@ -1275,6 +1275,9 @@
       <li><a href="https://en.wikipedia.org/wiki/John_Horgan_(journalist)">Horgan, John</a>:
         <i class="booktitle">The End of Science</i> (1996).
       </li>
+      <li><a href="https://en.wikipedia.org/wiki/John_D._Barrow">Barrow, John D.</a>:
+        <i class="booktitle">Impossibility: Limits of Science and the Science of Limits</i>. (1999)
+      </li>
     </ul>
 
     <p>Economics:</p>
