--- a/science/index.html
+++ b/science/index.html
@@ -1278,6 +1278,10 @@
       <li><a href="https://en.wikipedia.org/wiki/John_D._Barrow">Barrow, John D.</a>:
         <i class="booktitle">Impossibility: Limits of Science and the Science of Limits</i>. (1999)
       </li>
+      <li>Taylor, Mark Zachary:
+        <i class="booktitle">The Politics of Innovation: Why Some Countries Are Better Than Others at Science and Technology</i>. Oxford University Press, 2016. (444 pages)
+        <a href="https://global.oup.com/academic/product/the-politics-of-innovation-9780190464134"><abbr>ISBN</abbr> 9780190464134</a>.
+      </li>
     </ul>
 
     <p>Economics:</p>
