Golafshani: Understanding Reliability and Validity ...

--- a/science/index.html
+++ b/science/index.html
@@ -1282,6 +1282,11 @@
         <i class="booktitle">The Politics of Innovation: Why Some Countries Are Better Than Others at Science and Technology</i>. Oxford University Press, 2016. (444 pages)
         <a href="https://global.oup.com/academic/product/the-politics-of-innovation-9780190464134"><abbr>ISBN</abbr> 9780190464134</a>.
       </li>
+      <li>Golafshani, Nahid:
+        <a href="https://nsuworks.nova.edu/tqr/vol8/iss4/6/">Understanding Reliability and Validity in Qualitative Research</a>,
+        <i class="journal">The Qualitative Report</i>, volume 8, number 4 (2003) (Creative Commons Attribution-Noncommercial-Share Alike 4.0 Licence).
+        <!--@@download-->
+      </li>
     </ul>
 
     <p>Economics:</p>
