Simons: Is het einde van de wetenschap mogelijk?

--- a/science/index.html
+++ b/science/index.html
@@ -1267,6 +1267,12 @@
         <i class="booktitle">The Complexity Paradox: The More Answers We Find, the More Questions We Have</i>. Oxford University Press, 2014. (288 pages)
         <a href="https://global.oup.com/academic/product/the-complexity-paradox-9780199330348"><abbr>ISBN</abbr> 9780199330348</a>.
       </li>
+      <!--@@future and limits of science:-->
+      <li>Simons, Massimiliano:
+        <a href="https://www.eoswetenschap.eu/natuurwetenschappen/het-einde-van-de-wetenschap-mogelijk">Is het einde van de wetenschap mogelijk?</a>,
+        <i class="magazine">EOS Wetenschap</i>, 11.08.2018.
+        <!--"De basisbeginselen van de natuurkunde, scheikunde en biologie zijn bekend en hoogstens gaat het nog om het op z’n plaats leggen van de laatste puzzelstukjes."-->
+      </li>
       <!--Medawar: The Limits of Science-->
       <li><a href="https://en.wikipedia.org/wiki/Nicholas_Rescher">Rescher, Nicholas</a>:
         <i class="booktitle">The Limits of Science</i> (1984, 1999).
