--- a/science/index.html
+++ b/science/index.html
@@ -390,6 +390,10 @@
         <i class="booktitle">Newton’s Apple and Other Myths about Science</i>. Harvard University Press, 2015.
         <a href="http://www.hup.harvard.edu/catalog.php?isbn=9780674967984"><abbr>ISBN</abbr> 9780674967984</a>.
       </li>
+      <li>Trout, J. D.:
+        <i class="booktitle">Wondrous Truths: The Improbable Triumph of Modern Science</i>. Oxford University Press, 2016. (258 pages)
+        <a href="https://global.oup.com/academic/product/wondrous-truths-9780199385072"><abbr>ISBN</abbr> 9780199385072</a>.
+      </li>
       <li>Keene, Melanie:
         <i class="booktitle">Science in Wonderland: The scientific fairy tales of Victorian Britain</i>. Oxford University Press, 2015. (256 pages)
         <a href="https://global.oup.com/academic/product/science-in-wonderland-9780199662654"><abbr>ISBN</abbr> 9780199662654</a>.;
