Wynn et al: Quantum Leaps in the Wrong Direction

--- a/science/index.html
+++ b/science/index.html
@@ -949,6 +949,10 @@
           </li>
         </ul>
       </li>
+      <li>Wynn, Charles W.; Wiggins, Arthur W. (editors):
+        <i class="booktitle">Quantum Leaps in the Wrong Direction: Where Real Science Ends...and Pseudoscience Begins</i>. Second edition. Oxford University Press, 2017. (206 pages)
+        <a href="https://global.oup.com/academic/product/quantum-leaps-in-the-wrong-direction-9780190620295"><abbr>ISBN</abbr> 9780190620295</a>.
+      </li>
       <!--
       <li>
         <a href=""></a>
