Sidky: The War on Science, ...

--- a/science/index.html
+++ b/science/index.html
@@ -953,6 +953,10 @@
         <i class="booktitle">Quantum Leaps in the Wrong Direction: Where Real Science Ends...and Pseudoscience Begins</i>. Second edition. Oxford University Press, 2017. (206 pages)
         <a href="https://global.oup.com/academic/product/quantum-leaps-in-the-wrong-direction-9780190620295"><abbr>ISBN</abbr> 9780190620295</a>.
       </li>
+      <li>Sidky, H.:
+        <a href="https://www.csicop.org/si/show/e_war_on_science_anti-intellectualism_and_alternative_ways_of_knowing_in_21">The War on Science, Anti-Intellectualism, and ‘Alternative Ways of Knowing’ in 21st-Century America</a>,
+        <i class="magazie">Skeptical Inquirer</i>, Volume 42.2 (March / April 2018).
+      </li>
       <!--
       <li>
         <a href=""></a>
