--- a/science/index.html
+++ b/science/index.html
@@ -1114,6 +1114,10 @@
         <a href="http://www.critical-theory.com/noam-chomsky-calls-jacques-lacan-a-charlatan/">Noam Chomsky Calls Jacques Lacan a ‘Charlatan’</a>,
         <i class="blog">Critical Theory</i>, 28.02.2013.
       </li>
+      <li>Cohen-Charash, Yochi; Larson, Elliott C.:
+        <a href="http://journals.sagepub.com/doi/abs/10.1177/0963721416683667?journalCode=cdpa">An Emotion Divided: Studying Envy Is Better Than Studying “Benign” and “Malicious” Envy</a>,
+        <i class="journal">Current Directions in Psychological Science</i>, Volume: 26 issue: 2 (April 2017), page(s): 174-183.
+      </li>
     </ul>
     <!--"The 25 Best Self Improvement Books To Read Before You Turn 25" Lifehack; last updated on 24.08.2018:
       1. Seth Godin: Whatcha Gonna Do with That Duck? And Other Provocations
