Van de Ven: Envy and admiration ...

--- a/science/index.html
+++ b/science/index.html
@@ -1118,6 +1118,10 @@
         <a href="http://journals.sagepub.com/doi/abs/10.1177/0963721416683667?journalCode=cdpa">An Emotion Divided: Studying Envy Is Better Than Studying “Benign” and “Malicious” Envy</a>,
         <i class="journal">Current Directions in Psychological Science</i>, Volume: 26 issue: 2 (April 2017), page(s): 174-183.
       </li>
+      <li>van de Ven, Niels:
+        <a href="https://www.tandfonline.com/doi/abs/10.1080/02699931.2015.1087972?journalCode=pcem20">Envy and admiration: emotion and motivation following upward social comparison</a>,
+        <i class="journal">Cognition and Emotion</i>, Volume 31, Issue 1 (2017).
+      </li>
     </ul>
     <!--"The 25 Best Self Improvement Books To Read Before You Turn 25" Lifehack; last updated on 24.08.2018:
       1. Seth Godin: Whatcha Gonna Do with That Duck? And Other Provocations
