--- a/science/index.html
+++ b/science/index.html
@@ -398,6 +398,10 @@
         <i class="booktitle">Science in Wonderland: The scientific fairy tales of Victorian Britain</i>. Oxford University Press, 2015. (256 pages)
         <a href="https://global.oup.com/academic/product/science-in-wonderland-9780199662654"><abbr>ISBN</abbr> 9780199662654</a>.;
       </li>
+      <li>Leroi, Armand Marie:
+        <i class="booktitle">The Lagoon: How Aristotle Invented Science</i>. Bloomsbury, 2014. (512 pages)
+        <a href="https://www.bloomsbury.com/uk/the-lagoon-9781408836200/"><abbr>ISBN</abbr> 9781408836200</a>.
+      </li>
       <!--li><a href="https://www.youtube.com/watch?v=PxkxCSyP60Y">Historical Myths About Science by John L. Heilbro</a>,
         recording of a speech at Washington and Lee University in March 2014.
         (John L. Heilbron's lecture starts at 7'54''.)
